Prevent lowercase g from clipping underline.

--- a/styles.css
+++ b/styles.css
@@ -185,5 +185,5 @@ h2 {
 
 .tag {
   margin-bottom: 1rem;
-  padding-bottom: 0.125rem;
+  padding-bottom: 0.375rem;
 }
